--- a/db_homework/src/main/resources/application.properties
+++ b/db_homework/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## 数据源配置 (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/book_management
-spring.datasource.username=postgres
-spring.datasource.password=118023
+spring.datasource.username=alan
+spring.datasource.password=123456
 
 # Hibernate 原语
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
